# hr-project

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml
.github/workflows/: frontend-tests.yml
backend/: Makefile  README.md  alembic.ini  app.py  db.py  dev.db  password_utils.py  pyproject.toml  s3_utils.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py  0002_users_uuid_pk.py  3c87aa64605d_add_user_type_field.py  4b18fbfbc80e_add_resources_table.py  5a1b2c3d4e5f_change_file_path_to_s3_key.py  9fd18f46b682_add_reports_to_relationship.py  d2acfc720a47_add_notifications_table.py  f69346981af5_add_time_off_table.py
backend/hr_backend/: __init__.py
backend/tests/: test_auth.py  test_protected.py
docs/: migrations.md
frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vitest.config.ts
frontend/.next/: build-manifest.json  trace
frontend/.next/cache/: .tsbuildinfo  config.json
frontend/.next/server/: middleware-build-manifest.js  pages-manifest.json
frontend/.next/server/pages/: _app.js  _error.js  admin.js  approve-time-off.js  index.js  login.js  notifications.js  people.js  (+3 more)
frontend/components/: Header.tsx  Nav.tsx
frontend/context/: AuthContext.tsx
frontend/pages/: _app.tsx  admin.tsx  approve-time-off.tsx  home.tsx  index.tsx  login.tsx  notifications.tsx  people.tsx  profile.tsx  resources.tsx  time-off.tsx
frontend/styles/: globals.css
frontend/test/: AuthContext.test.tsx  AuthGuard.test.tsx  Nav.test.tsx  setup.ts
(+193 files in other folders)
